--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <title>Loruki | Cloud hosting for everyone</title>
 </head>
 <body>
-    <!--navbar-->
+    <!-- navbar -->
     <div class="navbar">
         <div class="container flex">
             <h1 class="logo">Loruki.</h1>
@@ -22,7 +23,7 @@
             </nav>
         </div>
     </div>
-    <!--showcase-->
+    <!-- showcase -->
     <section class="showcase">
         <div class="container grid">
            <div class="showcase-text">
@@ -32,7 +33,7 @@
                   Consequuntur, repellat. Minus
                   incidunt ut, quisquam est neque 
                   oloremque illum!</p>
-                <a href="features.html" class="btn btn-outline">Read more</a>
+                <a href="features.html" class="btn btn-outline">Read More</a>
            </div>
            
            <div class="showcase-form card">
@@ -52,6 +53,116 @@
            </div>
         </div>
     </section>
+    <!-- stats -->
+    <section class="stats">
+    <div class="container">
+        <h3 class="stats-heading text-center my-1">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, laudantium harum. Sapiente suscipit mollitia necessitatibus repudiandae, deleniti beatae?
+        </h3>
 
+        <div class="grid grid-3 text-center my-4">
+            <div>
+                <i class="fas fa-server fa-3x"></i>
+                <h3>10,349,405</h3>
+                <p class="text-secondary">Deployments</p>
+            </div>
+            <div>
+                <i class="fas fa-upload fa-3x"></i>
+                <h3>987TB</h3>
+                <p class="text-secondary">Published</p>
+            </div>
+            <div>
+                <i class="fas fa-project-diagram fa-3x"></i>
+                <h3>2,343,265</h3>
+                <p class="text-secondary">Projects</p>
+            </div>
+        </div>
+    </div> 
+    </section>
+
+    <!-- Cli -->
+    <section class="cli">
+        <div class="container grid">
+            <img src="images/cli.png" alt="">
+            <div class="card">
+                <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            </div>
+            <div class="card">
+                <h3>Lorem, ipsum dolor sit amet consectetur</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Lorem ipsum dolor sit amet.</h2>
+                <p class="lead my-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt illo.</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/cloud.png" alt="">
+        </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="hd text-center my-2">
+            Supported Languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images/logos/node.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="images/logos/csharp.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="images/logos/ruby.png" alt="">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="images/logos/php.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="images/logos/scala.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="images/logos/clojure.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Loruki</h1>
+                <p>Copyright &copy; 2021</p>
+            </div>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="features.html">Features</a></li>
+                        <li><a href="docs.html">Docs</a></li>
+                    </ul>
+                </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
